--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -2,9 +2,11 @@ aniso8601==8.0.0
 Click==7.0
 Flask==1.1.1
 Flask-RESTful==0.3.7
+Flask-SQLAlchemy==2.4.1
 itsdangerous==1.1.0
 Jinja2==2.11.1
 MarkupSafe==1.1.1
 pytz==2019.3
 six==1.14.0
+SQLAlchemy==1.3.13
 Werkzeug==0.16.1
