--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -1,12 +1,19 @@
 aniso8601==8.0.0
+certifi==2019.11.28
+chardet==3.0.4
 Click==7.0
 Flask==1.1.1
+Flask-JWT-Extended==3.24.1
 Flask-RESTful==0.3.7
 Flask-SQLAlchemy==2.4.1
+idna==2.8
 itsdangerous==1.1.0
 Jinja2==2.11.1
 MarkupSafe==1.1.1
+PyJWT==1.7.1
 pytz==2019.3
+requests==2.22.0
 six==1.14.0
 SQLAlchemy==1.3.13
+urllib3==1.25.8
 Werkzeug==0.16.1
