--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -1,6 +1,7 @@
 aniso8601==8.0.0
 APScheduler==3.6.3
 Click==7.0
+coverage==5.1
 Flask==1.1.1
 Flask-APScheduler==1.11.0
 Flask-JWT-Extended==3.24.1
