--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,5 @@ python:
 script:
   - cd api/
   - pip install -r requirements.txt
+  - printf "def hash_password(password):\n    return password" > application/passwords.py
   - python3 unittests.py
