--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -1,18 +1,16 @@
-aniso8601==8.0.0
 APScheduler==3.6.3
-Click==7.0
-Flask==1.1.1
+click==7.1.2
+Flask==1.1.2
 Flask-APScheduler==1.11.0
 Flask-JWT-Extended==3.24.1
-Flask-RESTful==0.3.8
-Flask-SQLAlchemy==2.4.1
+Flask-SQLAlchemy==2.4.3
 itsdangerous==1.1.0
-Jinja2==2.11.1
+Jinja2==2.11.2
 MarkupSafe==1.1.1
 PyJWT==1.7.1
 python-dateutil==2.8.1
-pytz==2019.3
-six==1.14.0
-SQLAlchemy==1.3.13
-tzlocal==2.0.0
-Werkzeug==1.0.0
+pytz==2020.1
+six==1.15.0
+SQLAlchemy==1.3.17
+tzlocal==2.1
+Werkzeug==1.0.1
