[API] Added errors identification

--- a/api/endpoints.yaml
+++ b/api/endpoints.yaml
@@ -41,16 +41,22 @@ paths:
               examples:
                 Missing Name:
                   value:
-                    error: invalid user
-                    description: "Missing user's name"
+                    error: Missing name
+                    description: "Missing name field in request's body"
+                    id: 270
+                    status: 400
                 Username too short:
                   value:
-                    error: invalid user
-                    description: "User's username is too short"
+                    error: username too short
+                    description: username must be at least 5 characters long
+                    id: 241
+                    status: 400
                 Invalid Email:
                   value:
-                    error: invalid user
-                    description: "User's email is not an email"
+                    error: email is not an email
+                    description: email field must contain a valid email
+                    id: 261
+                    status: 400
         '409':
           description: Conflict
           content:
@@ -119,8 +125,10 @@ paths:
               examples:
                 Missing Username:
                   value:
-                    error: invalid login
-                    description: "Missing user's password"
+                    error: Missing username
+                    description: "Missing username field in request's body"
+                    id: 240
+                    status: 400
         '401':
           description: Unauthorized
           content:
@@ -130,8 +138,10 @@ paths:
               examples:
                 Wrong username or password:
                   value:
-                    error: invalid login
-                    description: Wrong username or password
+                    error: Wrong username or password
+                    description: The username and/or password are wrong
+                    id: 220
+                    status: 401
       operationId: post-login
       description: Login
       requestBody:
@@ -219,7 +229,9 @@ paths:
                 Not Found:
                   value:
                     error: User does not exist
-                    description: "Can't find an user with that username"
+                    description: "Couldn't find an user with that username"
+                    id: 200
+                    status: 404
       operationId: get-users-username
       description: Get public infos of an user
   /token:
@@ -341,8 +353,10 @@ paths:
               examples:
                 Unauthorized:
                   value:
-                    error: unauthorized
-                    description: Missing Authorization Header
+                    error: Missing Authorization Header
+                    description: The resource you were looking for needs a token to work
+                    id: 120
+                    status: 401
       description: Delete the user
       security:
         - Access Token: []
@@ -385,8 +399,10 @@ paths:
               examples:
                 Unauthorized:
                   value:
-                    error: unauthorized
-                    description: Missing Authorization Header
+                    error: Missing Authorization Header
+                    description: The resource you were looking for needs a token to work
+                    id: 120
+                    status: 401
         '404':
           description: Not Found
           content:
@@ -394,10 +410,12 @@ paths:
               schema:
                 $ref: '#/components/schemas/Error'
               examples:
-                Field not found:
+                Resource not found:
                   value:
-                    error: not found
-                    description: The field to edit has not been found
+                    error: Resource not found
+                    description: "The resource you were looking for hasn't been found"
+                    id: 100
+                    status: 404
         '409':
           description: Conflict
           content:
@@ -407,8 +425,10 @@ paths:
               examples:
                 Conflict Username:
                   value:
-                    error: user already exists
-                    description: username has already been used
+                    error: User already exist
+                    description: "Some user's data has already been used"
+                    id: 230
+                    status: 409
       operationId: put-user-field
       description: |-
         Edit a field of the user.
@@ -481,8 +501,10 @@ paths:
               examples:
                 Name too short:
                   value:
-                    error: invalid community
-                    description: Name too short
+                    error: name too short
+                    description: name must be at least 5 characters long
+                    id: 331
+                    status: 400
         '403':
           description: Forbidden
           content:
@@ -492,11 +514,13 @@ paths:
               examples:
                 Missing perms:
                   value:
-                    error: "can't create community"
-                    description: Only admins can create communities
+                    error: "Can't create community"
+                    description: You have to be logged in as an admin to do that
+                    id: 310
+                    status: 403
       description: |-
         Create  a new community.
-        NB: only admins (perms > 2) can create a new community.
+        NB: only admins (perms >= 2) can create a new community.
       security:
         - Access Token: []
       requestBody:
@@ -546,7 +570,9 @@ paths:
                 Not Found:
                   value:
                     error: Community does not exist
-                    description: "Can't find a community with that name"
+                    description: "Couldn't find a community with that name"
+                    id: 300
+                    status: 404
       operationId: get-communities-name
       description: 'Return that community. If an authentication is provided, it returns it with a following field.'
       security:
@@ -602,28 +628,48 @@ components:
     Error:
       title: Error
       type: object
+      description: |-
+        An error raised by the APIs.
+
+        The complete list of errors can be found at https://github.com/Trinitrotoluenisti/kevin/blob/master/api/errors.json
+      x-examples:
+        Method not allowed:
+          error: Method not allowed
+          description: "The resource you were looking for doesn't allow that method"
+          id: 110
+          status: 405
+        Not Found:
+          error: Resource not found
+          description: "The resource you were looking for hasn't been found"
+          id: 100
+          status: 404
+        Internal Server Error:
+          error: Internal server error
+          description: "The server encountered an error during the processing of the request. We're sorry."
+          id: 190
+          status: 500
+        Expired token:
+          error: Expired token
+          description: The token has expired
+          id: 131
+          status: 422
       properties:
         error:
           type: string
         description:
           type: string
+        status:
+          type: integer
+          description: |
+            The HTTP status code associated
+        code:
+          type: integer
+          description: An unique id for the error
       required:
         - error
         - description
-      description: An error raised by the APIs
-      x-examples:
-        Method not allowed:
-          error: method not allowed
-          description: "The resource you are looking for doesn't allow that method"
-        Not Found:
-          error: not found
-          description: "The resource you are looking for hasn't been found"
-        Internal Server Error:
-          error: internal server error
-          description: "The server encountered an error processing the request. We're sorry."
-        Expired token:
-          error: expired token
-          description: The given token has expired
+        - status
+        - code
     Community:
       title: Community
       type: object
