[Website & API] Fixed API bug on starting, cleaned code

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
 # APIs
-api/application/database/*
-!api/application/database/.keep
+api/application/database/database.db
 api/application/passwords.py
 api/api.log
 api/todo.md
